--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -10,8 +10,10 @@ $color-gray-bg: #F2F2F4;
 
 $animation-text: .3s ease;
 
-
-$adaptive: 1500px;
-$tablet: 1250px;
-$tabletmed: 1100px;
-$tabletsm: 800px;
+$desktop: 1350px;
+$desktop-s: 1250px;
+$tablet: 900px;
+$tablet-mid: 800px;
+$tablet-s: 700px;
+$mobile: 600px;
+$mobile-s: 460px;
