--- a/scss/blocks/_body.scss
+++ b/scss/blocks/_body.scss
@@ -110,19 +110,19 @@
 	max-width: 1280px;
 }
 
-@media (max-width: 1350px) {
+@media (max-width: $desktop) {
 	.main__cards {
 		grid-template-columns: repeat(2, 1fr);
 	}
 }
 
-@media (max-width: 800px) {
+@media (max-width: $tablet-mid) {
 	.main__cards {
 		grid-template-columns: 1fr;
 	}
 }
 
-@media (max-width: 600px) {
+@media (max-width: $mobile) {
 	.about__title {
 		font-size: 40px;
 	}
@@ -139,7 +139,7 @@
 	}
 }
 
-@media (max-width: 460px) {
+@media (max-width: $mobile-s) {
 	.about__title {
 		font-size: 30px;
 	}
