--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -142,127 +142,86 @@
 
 
 	
-	.form__footer {
-		font-size: 14px;
-		color: $color-gray-ligth;
-		margin: 0 auto;
-		& img {
-			margin-right: 5px;
-		}
+.form__footer {
+	font-size: 14px;
+	color: $color-gray-ligth;
+	margin: 0 auto;
+	& img {
+		margin-right: 5px;
 	}
+}
 
 .yellow-btn {
 	margin-top: 30px;
+	@include yellow-btn;
 }
 
 
 
 
-	.header__form {
-		max-width: 380px;
-		justify-self: flex-end;
-		background: $color-white;
+.header__form {
+	max-width: 380px;
+	justify-self: flex-end;
+	background: $color-white;
+	border-radius: 10px;
+	padding-bottom: 36px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	gap: 5px;
+	width: 100%;
+	& .form__title {
+		background: #6A32B4;
+		padding: 32px 60px;
+		color: $color-white;
+		text-align: center;
+		font-size: 23px;
+		font-family: FuturaDemiC;
+		font-weight: 700;
+		border-radius: 10px 10px 0 0;
+	}
+	& .form__name,
+	.form__phone,
+	.form__footer {
+		align-self: flex-start;
+		font-family: FuturaBookC;
+	}
+
+	& .form__name {
+		margin-top: 20px;
+	}
+
+	& .input__name,
+	.input__phone {
+		background: #F5F3FF;
+		height: 56px;
 		border-radius: 10px;
-		padding-bottom: 36px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: space-between;
-		gap: 5px;
-		& .form__title {
-			background: #6A32B4;
-			padding: 32px 60px;
-			color: $color-white;
-			text-align: center;
-			font-size: 23px;
-			font-family: FuturaDemiC;
-			font-weight: 700;
-			border-radius: 10px 10px 0 0;
-		}
-		& .form__name,
-		.form__phone,
-		.form__footer {
-			align-self: flex-start;
+		-webkit-box-shadow: inset 7px 7px 11px -8px rgba(51,51,51,0.81);
+		-moz-box-shadow: inset 7px 7px 11px -8px rgba(51,51,51,0.81);
+		box-shadow: inset 7px 7px 11px -8px rgba(51,51,51,0.81);
+		&::placeholder {
 			font-family: FuturaBookC;
-		}
-
-		& .form__name {
-			margin-top: 20px;
-		}
-
-		& .input__name,
-		.input__phone {
-			background: #F5F3FF;
-			height: 56px;
-			border-radius: 10px;
-			-webkit-box-shadow: inset 7px 7px 11px -8px rgba(51,51,51,0.81);
-			-moz-box-shadow: inset 7px 7px 11px -8px rgba(51,51,51,0.81);
-			box-shadow: inset 7px 7px 11px -8px rgba(51,51,51,0.81);
-			&::placeholder {
-				font-family: FuturaBookC;
-				font-size: 16px;
-			}
+			font-size: 16px;
 		}
 	}
+}
 
 
 .form__hidden {
 	display: none;
+
+	@include form-hidden;
 }
 
-@media (max-width: $adaptive) {
+@media (max-width: $desktop) {
+
 	.header__menu {
-		align-self: center;
-		justify-content: center;
-		width: 100%;
-		gap: 100px;
+		flex-direction: column;
+		padding: 10px 0 10px 0;
+		gap: 20px;
 	}
-	.header__menu-nav {
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		width: 450px;
-		margin: 0 auto;
-		background-color: $color-purple-txt;
-		border-radius: 0 0 10px 10px;
-		padding-bottom: 30px;
-		padding-top: 20px;
-		transform: translateY(-100%);
-		transition: transform $animation-text;
-		border-radius: 0 0 10px 10px;
 
-
-		& .menu__list {
-			display: block;
-			text-align: center;
-			text-wrap: balance;
-			& .menu__item {
-				margin-bottom: 20px;
-			}
-			& .menu__item a:hover {
-				color: $color-dark-blue;
-			}
-		}
-
-		.menu__close-btn {
-			display: block;
-			position: absolute;
-			top: 5px;
-			right: 10px;
-			width: 20px;
-		}
-	}
-	.header__menu-nav.menu__list-open {
-		transform: translateY(0%);
-	}
-	.menu__btn {
-		display: flex;
-		cursor: pointer;
-	}
-}
-
-@media (max-width: 1350px) {
 	.container{
 		padding-left: 100px;
 		padding-right: 100px;
@@ -292,7 +251,7 @@
 	}
 }
 
-@media (max-width: 1050px) {
+@media (max-width: $desktop-s) {
 	.container {
 		padding-left: 50px;
 		padding-right: 50px;
@@ -314,7 +273,53 @@
 	}
 }
 
-@media (max-width: 900px) {
+@media (max-width: $tablet) {
+	.header__menu-nav {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		width: 450px;
+		margin: 0 auto;
+		background-color: $color-purple-txt;
+		border-radius: 0 0 10px 10px;
+		padding-bottom: 30px;
+		padding-top: 20px;
+		transform: translateY(-100%);
+		transition: transform $animation-text;
+		border-radius: 0 0 10px 10px;
+
+
+		& .menu__list {
+			display: block;
+			text-align: center;
+			text-wrap: balance;
+			gap: 10px;
+			& .menu__item {
+				margin-bottom: 20px;
+			}
+			& .menu__item a:hover {
+				color: $color-dark-blue;
+			}
+		}
+
+		.menu__close-btn {
+			display: block;
+			position: absolute;
+			top: 5px;
+			right: 10px;
+			width: 20px;
+		}
+	}
+	.header__menu-nav.menu__list-open {
+		transform: translateY(0%);
+	}
+	.menu__btn {
+		display: flex;
+		cursor: pointer;
+	}
+
+
 	.header__content {
 		padding-top: 130px;
 	}
@@ -325,7 +330,10 @@
 	}
 
 	.header__menu {
+		flex-direction: row;
 		gap: 150px;
+		justify-content: center;
+		width: 100%;
 	}
 
 	.header__form {
@@ -356,19 +364,19 @@
 	}
 }
 
-@media (max-width: 800px) {
+@media (max-width: $tablet-mid) {
 	.header__menu {
 		gap: 100px;
 	}
 }
 
-@media (max-width: 700px) {
+@media (max-width: $tablet-s) {
 	.header__menu {
 		gap: 50px;
 	}
 }
 
-@media (max-width: 600px) {
+@media (max-width: $mobile) {
 	.header__menu {
 		gap: 20px;
 	}
@@ -410,7 +418,7 @@
 	}
 }
 
-@media (max-width: 460px) {
+@media (max-width: $mobile-s) {
 	.content__title {
 		font-size: 30px;
 		text-align: center;
